# X4A-Compiler

./: .gdb_history  .gitignore  CMakeLists.txt  Readme.md  build.sh
Make/: LLVM-Build.sh  build.sh
src/: Node.cpp  Node.h  Runtime.cpp  main.cpp
src/AST/: Node.cpp  Node.h
src/Generator/: IRGenerate.cpp  IRGenerate.h
src/Lib/: Lib.cpp  Lib.h
src/Tools/: Daemon.h  Helper.cpp  Helper.h  Runtime.cpp  StdLib.cpp  StdLib.h
src/bison/: yacc.cpp  yacc.hpp  yacc.y
src/flex/: lexical.cpp  lexical.l
test/: main.xa
